@@ -1,5 +1,7 @@
 3.1.1 UNRELEASED
  * Update test suite for new example.org IP addresses
+ * Fix missing bits for use of ipaddr-py with python3 < 3.3 (LP: #1319611)
+   - Patch thanks to Arfrever Frehtes Taifersar Arahesis
 
 3.1.0 Thu Apr 24 23:52:00 EDT 2014
  * Raise DNSError when no nameservers have been found by the time a
